# simple-cpp-starter

./: .gitignore  CMakelists.txt  EXCEPTION.md  INITIALIZER_LIST.md  ITERATOR.md  LAMBDA_EXPRESSIONS.md  README.md  STL_ALGO.md  STL_LIST.md  STL_MAP.md  STL_STRING.md  STL_TUPLE.md  STL_VECTOR.md  STREAM.md  TYPE_CASTING.md  UNORDERED_MAP.md  VARIADIC_TEMPLATE.md  class1.cpp
.devcontainer/: devcontainer.json
animals/: CMakeLists.txt  cat.cpp  cat.h
exercise_1/: CMakeLists.txt  README.md  func_overloading.c  func_overloading.cpp
exercise_10/: CMakeLists.txt  README.md  car.h  copy_assignment.cpp  copy_elision.cpp
exercise_11/: CMakeLists.txt  README.md  car.h  memory.h  unique.cpp  unique1.cpp
exercise_12/: CMakeLists.txt  README.md  car.h  shared1.cpp  shared2.cpp  weak1.cpp  weak2.cpp
exercise_13/: CMakeLists.txt  OPERATOR_OVERLOADING.md  README.md  abstract1.cpp  car.h  engine.h  inheritance1.cpp  motorized.h  type_cast.cpp  vehicle.h
exercise_14/: CMakeLists.txt  README.md  car.h  function_template.cpp  garage.h  math.h  motorcycle.h  template_class.cpp  truck.h
exercise_15/: CMakeLists.txt  README.md  limits.cpp
exercise_16/: CMakeLists.txt  FUNCTOR.md  LAMBDA_EXPRESSIONS.md  functor1.cpp  lambda1.cpp
exercise_17/: CMakeLists.txt  README.md  list1.cpp  map1.cpp  map2.cpp  vector1.cpp  vector2.cpp
exercise_18/: CMakeLists.txt  example.txt  fstream1.cpp  fstream2.cpp
exercise_19/: CMakeLists.txt  README.md  atomic1.cpp  atomic2.cpp  future1.cpp  future2.cpp  lock_guard1.cpp  mutex1.cpp  thread1.cpp
exercise_2/: CMakeLists.txt  README.md  pass_by_pointer.c  pass_by_reference.cpp
exercise_20/: CMakeLists.txt  README.md  exception1.cpp  exception2.cpp
exercise_3/: CMakeLists.txt  README.md  lib_code.h  my_code.h  namespace.cpp
exercise_4/: CMakeLists.txt  README.md  enum.c  enum.cpp
exercise_5/: CMakeLists.txt  README.md  inline.cpp  macro.c
exercise_6/: CMakeLists.txt  README.md  overload.c  overload.cpp
exercise_7/: CMakeLists.txt  README.md  for_loop.c  for_loop.cpp
exercise_8/: CMakeLists.txt  README.md  car.cpp  car.h  class1.cpp  class2.cpp  class3.cpp
exercise_9/: CMakeLists.txt  README.md  car.h  copy_constructor.cpp  move_constructor.cpp
